--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -6,7 +6,45 @@ on:
   workflow_dispatch: # Allows manual triggering
 
 jobs:
-  update-clib-json:
+  check-version:
+    runs-on: ubuntu-latest
+    outputs:
+      should_update: ${{ steps.version_check.outputs.should_update }}
+      latest_release: ${{ steps.get_latest_release.outputs.latest_release }}
+    steps:
+      - name: Install Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Checkout the clib repository
+        uses: actions/checkout@v4
+
+      - name: Clone SIMDe headers
+        run: |
+          git clone --depth 1 https://github.com/goodcleanfun/simde_headers.git simde_headers
+
+      - name: Get latest SIMDe release version
+        id: get_latest_release
+        run: |
+          LATEST_RELEASE=$(curl -s https://api.github.com/repos/simd-everywhere/simde/releases/latest --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' --header 'Content-Type: application/json' | jq -r '.tag_name')
+          echo "::set-output name=latest_release::$LATEST_RELEASE"
+
+      - name: Check current version
+        id: version_check
+        run: |
+          CURRENT_VERSION=$(jq -r ".version" clib.json)
+          if [ "$CURRENT_VERSION" != "${{ steps.get_latest_release.outputs.latest_release }}" ]; then
+            echo "Current version ($CURRENT_VERSION) is different from latest release (${{ steps.get_latest_release.outputs.latest_release }})"
+            echo "::set-output name=should_update::false"
+          else
+            echo "Versions match, proceeding with update"
+            echo "::set-output name=should_update::true"
+          fi
+
+  update-headers:
+    needs: check-version
+    if: needs.check-version.outputs.should_update == 'true'
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -25,7 +63,7 @@ jobs:
 
       - name: Clone the SIMDe repository
         run: |
-          git clone --depth 1 https://github.com/simd-everywhere/simde-no-tests.git simde-repo
+          git clone --depth 1 https://github.com/simd-everywhere/simde.git --branch=${{ needs.check-version.outputs.latest_release }} simde-repo
 
       - name: Generate list of .h files
         id: generate_files
@@ -42,6 +80,8 @@ jobs:
           FILES_CSV=$(echo "${{ steps.generate_files.outputs.file_list }}" | sed -E 's/[^ ]+\///g' | sed -E 's/[[:space:]]/","/g')
           jq ".src = [\"$FILES_CSV\"]" clib.json > clib.json.tmp
           mv clib.json.tmp clib.json
+          jq ".version = \"${{ needs.check-version.outputs.latest_release }}\"" clib.json > clib.json.tmp
+          mv clib.json.tmp clib.json
 
       - name: Check for changes
         run: |
@@ -50,7 +90,9 @@ jobs:
           if [ "$(git diff --name-only HEAD)" ]; then
             timestamp=$(date -u)
             git commit -a -m "Update clib.json with latest SIMDe headers [${timestamp}]" || exit 0
+            git tag -a "${{ needs.check-version.outputs.latest_release }}" -m "Release ${{ needs.check-version.outputs.latest_release }}"
             git push
+            git push --tags
           else
             echo "No changes to commit."
           fi
