[fix] make sure AVX2 is used properly on MinGW

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -91,4 +91,4 @@ jobs:
           curl -L https://github.com/silentbicycle/greatest/raw/release/greatest.h -o deps/greatest/greatest.h
       - name: Build and Test with MinGW
         run: |
-          make CC=gcc CFLAGS="-std=c11" test
+          make CC=gcc CFLAGS="-std=gnu11 -march=x86-64-v3" test
