[github] adding -march=native

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,7 @@ jobs:
           make
           sudo make install
       - name: Run tests
-        run: make CC=${{ matrix.compiler }} CFLAGS="-std=gnu11" LDFLAGS="-lm" install test
+        run: make CC=${{ matrix.compiler }} CFLAGS="-std=gnu11 -march=native" LDFLAGS="-lm" install test
 
   test-macos:
     runs-on: macos-latest
@@ -91,4 +91,4 @@ jobs:
           curl -L https://github.com/silentbicycle/greatest/raw/release/greatest.h -o deps/greatest/greatest.h
       - name: Build and Test with MinGW
         run: |
-          make CC=gcc CFLAGS="-std=gnu11 -march=x86-64-v3" test
+          make CC=gcc CFLAGS="-std=gnu11 -march=native" test
